--- a/_layouts/hub.html
+++ b/_layouts/hub.html
@@ -11,30 +11,29 @@ layout: default
     <div id="news_top">
     {% assign counter = 0 %}
     {% for post in site.categories['post'] limit:5 %}
-            {% if counter == 0 %}
-                <div class="news_latest">
-                    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-                    {% if post.date == nil %}
-                        <p class="date">Undated</p>
-                    {% else %}
-                        <p class="date">{{ post.date | date: "%F %r" }}</p>
-                    {% endif %}
-                    <p class="excerpt">{{ post.excerpt }}</p>
-                </div>
-                <div class="news_next">
-            {% else %}
-                <div class="news_entry">
-                    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                    {% if post.date == nil %}
-                        <p class="date">Undated</p>
-                    {% else %}
-                        <p class="date">{{ post.date | date: "%F %r" }}</p>
-                    {% endif %}
-                    <p class="excerpt">{{ post.excerpt }}</p>
-                </div>
-            {% endif %}
-            {% assign counter = counter | plus:'1' %}
-
+        {% if counter == 0 %}
+            <div class="news_latest">
+                <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+                {% if post.date == nil %}
+                    <p class="date">Undated</p>
+                {% else %}
+                    <p class="date">{{ post.date | date: "%F %r %Z" }}</p>
+                {% endif %}
+                <p class="excerpt">{{ post.excerpt }}</p>
+            </div>
+            <div class="news_next">
+        {% else %}
+            <div class="news_entry">
+                <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                {% if post.date == nil %}
+                    <p class="date">Undated</p>
+                {% else %}
+                    <p class="date">{{ post.date | date: "%F %r %Z" }}</p>
+                {% endif %}
+                <p class="excerpt">{{ post.excerpt }}</p>
+            </div>
+        {% endif %}
+        {% assign counter = counter | plus:'1' %}
     {% endfor %}
     </div>
     </div>
