Change comment for link buttons

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -127,6 +127,6 @@ $font_footer:               $font_default;
 $font_size_footer:          13px;
 $font_size_license:         13px;
 
-// Social media buttons
+// Link buttons
 $font_button:               $font_sans_thin;
 $font_size_button:          13px;
