Correct comment spelling

--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -74,7 +74,7 @@ $color_news_date:               $color_red - 50;
 $color_news_excerpt:            $color_text;
 $color_news_text:               $color_text;
 
-// New bit
+// News bit
 $color_news_bit_date:           $color_red - 50;
 
 // Sidebar
