Rename comment label

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -91,7 +91,7 @@ $font_size_news_hub_next_date:      12px;
 $font_news_hub_excerpt:             $font_serif_thin;
 $font_size_news_hub_excerpt:        14px;
 
-// News Article
+// News Bits
 $font_news_title:           $font_serif_thin;
 $font_size_news_title:      14px;
 $font_news_text:            $font_serif_thin;
