--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -819,6 +819,9 @@ section.post_column_main {
             font-size: $font_size_page_meta;
             font-style: italic;
             line-height: $font_line_height_page_meta;
+            @include max-screen(720px) {
+                line-height: $font_line_height_page_meta + 1;
+            }
             color: $color_text;
             margin: 0;
         }
