--- a/_includes/post_recent.html
+++ b/_includes/post_recent.html
@@ -1,19 +1,17 @@
 <div id="recent_posts">
     <h1>Recent Posts</h1>
     <ul>
-        {% for post in site.posts limit:6 %}
-            {% if post.group == "Posts" %}
-                {% if post.title != page.title %}
-                    <li>
-                        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                        {% if post.date == nil %}
-                            <p class="date">Undated</p>
-                        {% else %}
-                            <p class="date">{{ post.date | date: "%F %r" }}</p>
-                        {% endif %}
-                        <p class="excerpt">{{ post.excerpt }}</p>
-                    </li>
-                {% endif %}
+        {% for post in site.categories['post'] limit:5 %}
+            {% if post.title != page.title %}
+                <li>
+                    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                    {% if post.date == nil %}
+                        <p class="date">Undated</p>
+                    {% else %}
+                        <p class="date">{{ post.date | date: "%F %r %Z" }}</p>
+                    {% endif %}
+                    <p class="excerpt">{{ post.excerpt }}</p>
+                </li>
             {% endif %}
         {% endfor %}
     </ul>
