--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -2,11 +2,11 @@
     <!-- The following code snippet was taken from http://zhangwenli.com -->
     <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
     {% assign hasSimilar = '' %}
-    {% for post in site.related_posts %}
+    {% for post in site.categories['post'] limit:5 %}
         {% assign postHasSimilar = false %}
         {% for tag in post.tags %}
             {% for thisTag in page.tags %}
-                {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag and post.group == "Posts" %}
+                {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
                     {% if hasSimilar.size == 0 %}
                         <h1>Related Posts</h1>
                         <ul>
@@ -33,7 +33,7 @@
                         {% if post.date == nil %}
                             <p class="date">Undated</p>
                         {% else %}
-                            <p class="date">{{ post.date | date: "%F %r" }}</p>
+                            <p class="date">{{ post.date | date: "%F %r %Z" }}</p>
                         {% endif %}
                         <p class="excerpt">{{ post.excerpt }}</p>
                     </li>
