--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -89,7 +89,7 @@ $color_aside_border:            $color_red - 100;
 
 // Post tag
 $color_tag_text:                $color_text;
-$color_tag_bg:                  #dddddd;
+$color_tag_bg:                  #ededed;
 
 // Quote
 $color_quote_text:              $color_text;
