Lighter horizontal rule

--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -45,7 +45,7 @@ $color_table_border:            #404040;
 $color_table_th_bg:             #efefef;
 
 // Horizontal line
-$color_hr_default:              $color_bg;
+$color_hr_default:              #e7e7e7;
 $color_hr_dark:                 #404040;
 $color_hr_darker:               $color_bg;
 
