--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,12 +2,11 @@
     <!-- Site-wide information, reminder, etc. -->
 	<!-- <p><a href="http://matthewjamestaylor.com/blog/perfect-multi-column-liquid-layouts" title="Perfect multi-column liquid layouts - iPhone compatible">&laquo; Back to the CSS article</a> by <a href="http://matthewjamestaylor.com">Matthew James Taylor</a></p> -->
     <div id="site_header">
-        <h1>
-            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-        </h1>
-        <p>
-            {{ site.description }}<br/>
-        </p>
+        <div id="site_title">
+            <img src="/images/du_times_02.1.png" width="35" height="35" alt='Duterte Times' />
+            <h1><a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></h1>
+            <p>{{ site.description }}</p>
+        </div>
     </div>
     
     {% include socmed_links.html %}
