--- a/_sass/mixin.scss
+++ b/_sass/mixin.scss
@@ -43,21 +43,21 @@
     color: $color_button_text;
     background-color: $color_button_bg;
 
-    padding: 4px 10px 5px 10px;
+    padding: 6px 10px 5px 10px;
     border-radius: 4px;
-    border-bottom: 1px solid $color_link_underline;
-    
+    //border-bottom: 1px solid $color_link_underline;
     
     cursor: pointer;
     background-image: none;
     
     &:hover {
         background-color: $color_button_hover_bg;
+        border-bottom: 1px solid $color_button_hover_bg;
     }
 }
 
 @mixin top_button {
-    padding: 4px 10px 3px 10px;
+    //padding: 6px 10px 3px 10px;
     border-radius: 4px 4px 0 0;
 }
 
