--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -212,7 +212,7 @@ div.footnotes {
 header {
 
     width: 100%;
-    height: 95px;
+    height: 91px;
     padding-top: 5px;
     margin: 0;
     z-index: 1000;
@@ -273,6 +273,8 @@ header {
     #nav_top,
     #social_media_links {
         ul {
+            margin: 0;
+            margin-top: 10px;
             padding: 0;
             
             li {
