Lighten up footer background color

--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -9,7 +9,7 @@ $color_secondary:               $color_primary - 30;
 // Background is the color of the footer background.
 // This avoids the footer from showing a different
 // color if the content of the page is shorter.
-$color_bg:                      #cdcccc;
+$color_bg:                      #dedddd;
 $color_main_bg:                 #ffffff;
 
 // Text
