Lighten up header background color

--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -30,7 +30,7 @@ $color_heading_text:            black;
 // Header
 $color_header_title:            black;
 $color_header_title_tag:        black;
-$color_header_bg:               #dedddd;
+$color_header_bg:               #efeeee;
 $color_header_border_top:       $color_primary;
 $color_header_border_bottom:    $color_primary;
 
