Add shadow to sidebar div containers

--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -80,7 +80,7 @@ $color_news_bit_date:           $color_red - 50;
 // Sidebar
 $color_sidebar_label:           $color_text;
 $color_sidebar_text:            $color_text;
-$color_sidebar_bg:              #efefef;
+$color_sidebar_bg:              #ffffff;
 
 // Aside
 $color_aside_text:              $color_text;
