--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -1,4 +1,3 @@
-
 $color_red:                     #CE1126;
 $color_blue:                    #0038A8;
 $color_yellow:                  #FCD116;
@@ -30,7 +29,7 @@ $color_heading_text:            black;
 // Header
 $color_header_title:            black;
 $color_header_title_tag:        black;
-$color_header_bg:               #efeeee;
+$color_header_bg:               #f0f0f0;
 $color_header_border_top:       $color_primary;
 $color_header_border_bottom:    $color_primary;
 
@@ -80,7 +79,7 @@ $color_news_bit_date:           $color_red - 50;
 // Sidebar
 $color_sidebar_label:           $color_text;
 $color_sidebar_text:            $color_text;
-$color_sidebar_bg:              #ffffff;
+$color_sidebar_bg:              #f5f5f5;
 
 // Aside
 $color_aside_text:              $color_text;
