--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -1,4 +1,6 @@
 <div id="related_posts">
+    {% capture nowdate  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
+    {% capture nowyear  %}{{ 'now' | date: '%Y' }}{% endcapture %}
     <!-- The following code snippet was taken from http://zhangwenli.com -->
     <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
     {% assign hasSimilar = '' %}
@@ -33,7 +35,15 @@
                         {% if post.date == nil %}
                             <p class="date">Undated</p>
                         {% else %}
-                            <p class="date">{{ post.date | date: "%F %r %Z" }}</p>
+                            <p class="date">
+                                {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
+                                {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
+                                {% if postdate == nowdate %}
+                                    {{ post.date | date: site.data.format.same_day }}
+                                {% elsif postyear == nowyear %}
+                                    {{ post.date | date: site.data.format.same_year }}
+                                {% endif %}
+                            </p>
                         {% endif %}
                         <p class="excerpt">{{ post.excerpt }}</p>
                     </li>
