--- a/_includes/page_left_sidebar.html
+++ b/_includes/page_left_sidebar.html
@@ -12,26 +12,30 @@
         <div class="newsbits">
             {% capture nowdate  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
             {% capture nowyear  %}{{ 'now' | date: '%Y' }}{% endcapture %}
-            {% for post in site.categories['newsbit'] limit: 10 %}
-                {% assign newsbit_content = post.content | remove: '<p>' | remove: '</p>'%}
-                {% if post.publish and newsbit_content != "" %}
-                <div class="newsbit">
-                    <p class="date">
-                        {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
-                        {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
-                        {% if postdate == nowdate %}
-                            {{ post.date | date: site.data.format.same_day }}
-                        {% elsif postyear == nowyear %}
-                            {{ post.date | date: site.data.format.same_year }}
-                        {% endif %}
-                    </p>
-                    <p>
-                        {{ newsbit_content }}
-                        {% if post.reference != nil %}
-                             &#x25cf; {{ post.reference }}
-                        {% endif %}
-                    </p>
-                </div>
+            {% for post in site.categories['newsbit'] %}
+                {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
+                {% if postdate == nowdate %}
+                    {% assign newsbit_content = post.content | remove: '<p>' | remove: '</p>'%}
+                    {% if post.publish and newsbit_content != "" %}
+                    <div class="newsbit">
+                        <p class="date">
+                            {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
+                            {% if postdate == nowdate %}
+                                {{ post.date | date: site.data.format.same_day }}
+                            {% elsif postyear == nowyear %}
+                                {{ post.date | date: site.data.format.same_year }}
+                            {% endif %}
+                        </p>
+                        <p>
+                            {{ newsbit_content }}
+                            {% if post.reference != nil %}
+                                 &#x25cf; {{ post.reference }}
+                            {% endif %}
+                        </p>
+                    </div>
+                    {% endif %}
+                {% else %}
+                    {% break %}
                 {% endif %}
             {% endfor %}
         </div>
