Standardize post date formatting

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,6 +39,7 @@
     <!-- For search.json -->
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="{{ site.baseurl }}/javascripts/respond.js"></script>
+    <script src="{{ site.baseurl }}/javascripts/moment.js"></script>
     
     <!-- Load Google fonts asynchroneously -->
     <!-- Ref: http://haisum.github.io/2014/11/03/google-fonts-asynchroneous-loading/ -->
