--- a/_includes/post_recent.html
+++ b/_includes/post_recent.html
@@ -1,8 +1,8 @@
 <div id="recent_posts">
     <h1>Recent Posts</h1>
     <ul>
-        {% capture nowdate  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
-        {% capture nowyear  %}{{ 'now' | date: '%Y' }}{% endcapture %}
+        {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
+        {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
         {% for post in site.categories['post'] limit:5 %}
             {% if post.title != page.title %}
                 <li>
@@ -13,7 +13,7 @@
                         <p class="date">
                             {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
                             {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
-                            {% if postdate == nowdate %}
+                            {% if postdate == nowday %}
                                 {{ post.date | date: site.data.format.same_day }}
                             {% elsif postyear == nowyear %}
                                 {{ post.date | date: site.data.format.same_year }}
