--- a/_includes/page_left_sidebar.html
+++ b/_includes/page_left_sidebar.html
@@ -1,4 +1,6 @@
 <section class="column_left_sidebar">
+    {% include datetime.html %}
+    
     <div id="nav_left">
         {% include common_menu.html %}
     </div>
@@ -10,17 +12,16 @@
     <div id="newsbits_roll">
         <h1>News Bits</h1>
         <div class="newsbits">
-            {% capture nowdate  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
+            {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
             {% capture nowyear  %}{{ 'now' | date: '%Y' }}{% endcapture %}
             {% for post in site.categories['newsbit'] %}
                 {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
-                {% if postdate == nowdate %}
                     {% assign newsbit_content = post.content | remove: '<p>' | remove: '</p>'%}
                     {% if post.publish and newsbit_content != "" %}
                     <div class="newsbit">
                         <p class="date">
                             {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
-                            {% if postdate == nowdate %}
+                            {% if postdate == nowday %}
                                 {{ post.date | date: site.data.format.same_day }}
                             {% elsif postyear == nowyear %}
                                 {{ post.date | date: site.data.format.same_year }}
@@ -34,9 +35,6 @@
                         </p>
                     </div>
                     {% endif %}
-                {% else %}
-                    {% break %}
-                {% endif %}
             {% endfor %}
         </div>
     </div>
