Display of current UTC and local date/time

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -420,6 +420,17 @@ section.column_left_sidebar {
     }
 }
 
+#datetime {
+    margin-bottom: 15px;
+
+    p {
+        font-family: $font_sidebar;
+        font-size: $font_size_sidebar - 1;
+        line-height: $font_size_sidebar + 2;
+        margin: 0px 0 2px 0;
+    }
+}
+
 #nav_left {
     
     @include min-screen(721px) {
